完成生产者

--- a/producer/pom.xml
+++ b/producer/pom.xml
@@ -12,9 +12,9 @@
     </parent>
 
     <groupId>com.EamonVenti</groupId>
-    <artifactId>produce</artifactId>
+    <artifactId>producer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>produce</name>
+    <name>producer</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
