--- a/storage/src/main/resources/application.yml
+++ b/storage/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: storage
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/eamon_shopping?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
     username: root
     password:
