--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,13 @@
     <artifactId>SpringCloud_Shopping</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
     <!--指定子模块-->
     <modules>
         <module>account</module>
         <module>order</module>
         <module>storage</module>
+        <module>nacos_provide</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -24,6 +26,8 @@
         <relativePath/>
     </parent>
 
+
+    <!--此处依赖，需要在子模块的<dependencies>中通过<groupId><artifactId>引用-->
     <dependencyManagement>
         <dependencies>
             <!-- springCloud -->
@@ -96,12 +100,41 @@
                 <scope>test</scope>
             </dependency>
 
-
-
         </dependencies>
 
-
     </dependencyManagement>
+
+    <!--此处依赖会在子模块中自动引入-->
+    <dependencies>
+        <!--以下3个 Nacos所需依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-dependencies</artifactId>
+            <version>${spring-cloud.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-dependencies</artifactId>
+            <version>${spring-boot.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+            <version>${nacos.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <!--解决无法导入 @EnableDiscoveryClient 注解-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <version>2021.1</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -112,6 +145,8 @@
         <mysql.version>5.1.47</mysql.version>
         <alibaba.seata.version>2.1.0.RELEASE</alibaba.seata.version>
         <seata.version>1.1.0</seata.version>
+        <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
+        <nacos.version>0.2.2.RELEASE</nacos.version>
     </properties>
 
     <build>
