--- a/storage/src/main/resources/application.yml
+++ b/storage/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
     url: jdbc:mysql://localhost:3306/eamon_shopping?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
     username: root
     password:
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.217.128:8848
 mybatis-plus:
   global-config:
     db-config:
