--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,22 @@
         <relativePath/>
     </parent>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
+        <!--        <spring-cloud.version>Greenwich.SR5</spring-cloud.version>-->
+        <mybatis.plus.version>3.3.0</mybatis.plus.version>
+        <mysql.version>5.1.47</mysql.version>
+        <alibaba.seata.version>2.1.0.RELEASE</alibaba.seata.version>
+        <seata.version>1.1.0</seata.version>
+        <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
+        <!--        <spring-boot.version>2.0.4.RELEASE</spring-boot.version>-->
+        <nacos.version>2.1.2.RELEASE</nacos.version>
+        <!--        <nacos.version>0.2.1.RELEASE</nacos.version>-->
+    </properties>
+
 
     <!--此处依赖，需要在子模块的<dependencies>中通过<groupId><artifactId>引用-->
     <dependencyManagement>
@@ -137,23 +153,26 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
             <version>${nacos.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-seata</artifactId>
+            <version>${alibaba.seata.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>seata-all</artifactId>
+                    <groupId>io.seata</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <artifactId>seata-all</artifactId>
+            <groupId>io.seata</groupId>
+            <version>${seata.version}</version>
+        </dependency>
     </dependencies>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-        <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
-<!--        <spring-cloud.version>Greenwich.SR5</spring-cloud.version>-->
-        <mybatis.plus.version>3.3.0</mybatis.plus.version>
-        <mysql.version>5.1.47</mysql.version>
-        <alibaba.seata.version>2.1.0.RELEASE</alibaba.seata.version>
-        <seata.version>1.1.0</seata.version>
-        <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
-<!--        <spring-boot.version>2.0.4.RELEASE</spring-boot.version>-->
-        <nacos.version>2.1.2.RELEASE</nacos.version>
-<!--        <nacos.version>0.2.1.RELEASE</nacos.version>-->
-    </properties>
+
 
     <build>
         <finalName>SpringCloud_Shopping</finalName>
