--- a/storage/src/main/resources/application.yml
+++ b/storage/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
     nacos:
       discovery:
         server-addr: 192.168.217.128:8848
+    alibaba:
+      seata:
+        tx-service-group: storage-service-fescar-service-group
 mybatis-plus:
   global-config:
     db-config:
