未作数据源代理，问题：order被创建，但是回滚成功

--- a/nacos_provide/src/main/resources/application.yml
+++ b/nacos_provide/src/main/resources/application.yml
@@ -6,7 +6,8 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.217.128:8848
+        server-addr: 192.168.217.129:8848
     alibaba:
       seata:
-        tx-service-group: nacos_provide-service-fescar-service-group
+        #tx-service-group: nacos_provide-service-fescar-service-group
+        tx-service-group: my_test_tx_group
