--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -11,11 +11,14 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.217.128:8848
+        server-addr: 192.168.217.129:8848
     # seata 服务分组，要与服务端nacos-config.txt中service.vgroup_mapping的后缀对应
     alibaba:
       seata:
-        tx-service-group: account-service-fescar-service-group
+        enabled: true
+        application-id: ${spring.application.name}
+        #tx-service-group: account-service-fescar-service-group
+        tx-service-group: my_test_tx_group
 mybatis-plus:
   global-config:
     db-config:
