修复order无法回滚问题，为seata添加了代理数据源

--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -25,3 +25,5 @@ mybatis-plus:
       insert-strategy: not_null
       update-strategy: not_null
       id-type: auto
+  mapper-locations: classpath:mapper/xml/*.xml
+  type-aliases-package: eamon.springcloud.account.entity
