--- a/storage/src/main/resources/application.yml
+++ b/storage/src/main/resources/application.yml
@@ -24,3 +24,5 @@ mybatis-plus:
       insert-strategy: not_null
       update-strategy: not_null
       id-type: auto
+  mapper-locations: classpath:mapper/xml/*.xml
+  type-aliases-package: eamon.springcloud.storage.entity
